# portal

./: .gitignore  AGENTS.md  AUTO_SCROLL_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CLAUDE.md  CLIPBOARD_FIX_IMPLEMENTATION.md  CLIPBOARD_FIX_RESEARCH.md  Cargo.toml  Cross.toml  IMPLEMENTATION_COMPLETE.md  README.md  SELECTION_ANCHORING_RESEARCH.md  SELECTION_ANCHORING_VERIFICATION.md  SUBAGENT_TASK_COMPLETE.md  THIRD_PARTY_NOTICES.md  auto-scroll-diagram.txt  flake.nix  run.sh  update.sh
.githooks/: pre-push
.github/workflows/: nix.yml  release.yml  test.yml
assets/app-icons/: portal.desktop  portal.icns
scripts/: install-hooks.sh  remote-build.sh
scripts/hooks/: pre-push
src/: app.rs  error.rs  fonts.rs  fs_utils.rs  icons.rs  keybindings.rs  lib.rs  local_fs.rs  logging.rs  main.rs  message.rs  platform.rs  security_log.rs  terminal_paste.rs  theme.rs  validation.rs
src/app/: actions.rs  view_model.rs
src/app/managers/: dialog_manager.rs  file_viewer_manager.rs  mod.rs  proxy_sessions_manager.rs  session_manager.rs  sftp_manager.rs  snippet_execution_manager.rs  transfer_manager.rs
src/app/services/: connection.rs  file_viewer.rs  history.rs  mod.rs  open_with.rs
src/app/update/: dialog.rs  file_viewer.rs  history.rs  host.rs  mod.rs  notification.rs  proxy_sessions.rs  session.rs  sftp.rs  snippet.rs  tab.rs  ui.rs  vault.rs  vnc.rs
src/app/update/ui/: keyboard.rs  settings.rs
src/config/: agent_notifications.rs  history.rs  hosts.rs  mod.rs  paths.rs  settings.rs  snippet_history.rs  snippets.rs  ssh_config.rs
src/hub/: auth.rs  diagnostics.rs  http.rs  mod.rs  sync.rs  vault.rs  vault_enrollment.rs
src/local/: mod.rs  session.rs
src/proxy/: mod.rs  session.rs
src/sftp/: client.rs  mod.rs  session.rs  types.rs
src/ssh/: auth.rs  auth_flow.rs  auth_prompt.rs  client.rs  connection_pool.rs  handler.rs  host_key_verification.rs  key_install.rs  known_hosts.rs  mod.rs  os_detect.rs  passphrase_cache.rs  reconnect.rs  session.rs  tunnel.rs
src/ssh/known_hosts/: matchers.rs  mod.rs  scan.rs
src/terminal/: attention.rs  backend.rs  block_elements.rs  colors.rs  glyph_constraints.rs  links.rs  logger.rs  metrics.rs  mod.rs  nerd_font_attributes.rs  search.rs  text.rs  widget.rs
src/views/: command_palette.rs  components.rs  history_view.rs  host_details_sheet.rs  host_grid.rs  mod.rs  notification_center.rs  proxy_sessions.rs  settings_page.rs  sftp_picker.rs  sftp_view.rs  sidebar.rs  snippet_edit.rs  snippet_grid.rs  snippet_results.rs  tab_context_menu.rs  tabs.rs  terminal_status_bar.rs  terminal_view.rs  toast.rs  vault_page.rs  vnc_view.rs
src/views/dialogs/: about_dialog.rs  auth_prompt_dialog.rs  common.rs  connecting_dialog.rs  host_dialog.rs  host_key_dialog.rs  mod.rs  passphrase_dialog.rs  password_dialog.rs  portal_hub_dialogs.rs  quick_connect_dialog.rs  session_choice_dialog.rs  settings_dialog.rs  sftp_dialogs.rs  snippets_dialog.rs  vnc_cleartext_dialog.rs
src/views/file_viewer/: mod.rs  state.rs  types.rs
src/views/sftp/: context_menu.rs  dialogs.rs  mod.rs  pane.rs  state.rs  types.rs
src/vnc/: encoding.rs  framebuffer.rs  keysym.rs  mod.rs  monitor.rs  net.rs  quality.rs  session.rs  widget.rs
src/widgets/: animated_width.rs  column_resize_handle.rs  drag_tab_row.rs  mod.rs  mouse_area.rs
tests/: validation_tests.rs
tests/common/: mod.rs
tests/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  sshd_config
tests/docker/test_keys/: .gitignore  generate_keys.sh
tests/ssh_integration/: auth_tests.rs  connection_tests.rs  failure_tests.rs  fixtures.rs  host_key_tests.rs  mod.rs  multiplexing_tests.rs  port_forward_tests.rs  sftp_transfer_tests.rs
