[package]
name = "portal"
version = "0.5.3"
edition = "2024"
description = "A modern SSH client with GUI"
authors = ["John"]
license = "MIT"
rust-version = "1.85"

[dependencies]
# GUI
iced = { version = "0.14", features = ["tokio", "advanced", "svg", "markdown", "highlighter", "image"] }

# Terminal emulation
alacritty_terminal = "0.25.1"

# SSH
russh = "0.56.0"
russh-sftp = "2.1.1"
ssh-key = { version = "0.6", features = ["std"] }

# Async
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
data-encoding = "2.6"
hmac = "0.12"
sha1 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
regex = "1"

# Additional
parking_lot = "0.12"
rfd = "0.15"  # Native file dialogs
open = "5"    # Open files with default application

# Local terminal
portable-pty = "0.8"

# File viewer
iced-code-editor = "0.2"  # Code editor with syntax highlighting
pdfium-render = "0.8"     # PDF rendering
image = "0.25"            # Image format support

[profile.release]
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "Portal"
identifier = "com.digitalpals.portal"
icon = ["assets/app-icons/portal.icns"]
category = "public.app-category.utilities"
short_description = "A modern SSH client with GUI"

[package.metadata.deb]
assets = [
  ["assets/app-icons/portal.desktop", "usr/share/applications/portal.desktop", "644"],
  ["assets/app-icons/portal.svg", "usr/share/icons/hicolor/scalable/apps/portal.svg", "644"],
  ["assets/app-icons/png/portal-128.png", "usr/share/icons/hicolor/128x128/apps/portal.png", "644"],
  ["assets/app-icons/png/portal-256.png", "usr/share/icons/hicolor/256x256/apps/portal.png", "644"],
  ["assets/app-icons/png/portal-512.png", "usr/share/icons/hicolor/512x512/apps/portal.png", "644"],
]
depends = ["libwayland-client0", "libxkbcommon0", "libvulkan1"]

[package.metadata.generate-rpm]
assets = [
  { source = "assets/app-icons/portal.desktop", dest = "/usr/share/applications/portal.desktop", mode = "644" },
  { source = "assets/app-icons/portal.svg", dest = "/usr/share/icons/hicolor/scalable/apps/portal.svg", mode = "644" },
  { source = "assets/app-icons/png/portal-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/portal.png", mode = "644" },
  { source = "assets/app-icons/png/portal-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/portal.png", mode = "644" },
  { source = "assets/app-icons/png/portal-512.png", dest = "/usr/share/icons/hicolor/512x512/apps/portal.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
wayland = "*"
libxkbcommon = "*"
vulkan-loader = "*"

[dev-dependencies]
tempfile = "3.24.0"

[[test]]
name = "ssh_integration"
path = "tests/ssh_integration/mod.rs"
